syntax = "proto3";

package order;

service OrderService {
    rpc CreateOrder(CreateOrderRequest) returns (OrderResponse);
    rpc UpdateStatusOrder(UpdateStatusOrderRequest) returns (OrderResponse);
    rpc GetOrderProduct(GetOrderRequest) returns (OrderDetailsResponse);
    rpc GetOrderProducts(Empty) returns (OrderListResponse);
}

message CreateOrderRequest {
    string referenceOrder = 1;
    double totalAmount = 2;
    string customerId = 3;
    repeated ProductItem productIds = 4;
}

message ProductItem {
    string productId = 1;
    int32 cant = 2;
}

message OrderResponse {
    bool success = 1;
    string message = 2;
    string referenceOrder = 3;
}

message UpdateStatusOrderRequest {
    int32 orderId = 1;
    string statusOrder = 2;
}

message GetOrderRequest {
    int32 orderId = 1;
}

message OrderDetailsResponse {
    bool success = 1;
    Order order = 2;
    repeated OrderProduct orderProducts = 3;
}

message OrderListResponse {
    bool success = 1;
    repeated OrderWithProducts data = 2;
}

message Order {
    int32 id = 1;
    string referenceOrder = 2;
    string statusOrder = 3;
    double totalAmount = 4;
    string created_at = 5;
    Customer customer = 6;
    repeated OrderProduct orderProducts = 7;
}

message Customer {
    int32 id = 1;
    string nameCustomer = 2;
    string phoneCustomer = 3;
    string neighborhoodCustomer = 4;
    string address = 5;
    string email = 6;
}

message OrderProduct {
    int32 id = 1;
    Product product = 2;
    int32 cant = 3;
    string dateOrder = 4;
}

message Product {
    int32 id = 1;
    string nameProduct = 2;
    string referenceProduct = 3;
    double amountProduct = 4;
    string description = 5;
    int32 stock = 6;
}

message OrderWithProducts {
    Order order = 1;
    repeated OrderProduct orderProducts = 2;
}

message Empty {}